--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           <span>Clock Face</span>
           <div class="theme">
             <img
-              src="./resources/icons/angle-left-solid.svg"
+              src="./public/resources/icons/angle-left-solid.svg"
               width="10px"
               id="leftArrow"
             />
             <div class="themeSelect"></div>
             <img
-              src="./resources/icons/angle-right-solid.svg"
+              src="./public/resources/icons/angle-right-solid.svg"
               width="10px"
               id="rightArrow"
             />
@@ -40,7 +40,7 @@
       </div>
       <div class="clockFrameContainer">
         <img
-          src="./resources/final1.png"
+          src="./public/resources/final1.png"
           alt="analog-clock-frame1.png"
           class="clockFrameImg"
           id="clockFrameImg"
