--- a/index.html
+++ b/index.html
@@ -24,17 +24,31 @@
         <div class="themeContainer">
           <span>Clock Face</span>
           <div class="theme">
-            <img
-              src="./public/resources/icons/angle-left-solid.svg"
-              width="10px"
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 320 512"
+              width="1.5rem"
               id="leftArrow"
-            />
+            >
+              <!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <path
+                d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"
+                style="fill: black"
+              />
+            </svg>
             <div class="themeSelect"></div>
-            <img
-              src="./public/resources/icons/angle-right-solid.svg"
-              width="10px"
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 320 512"
+              width="1.5rem"
               id="rightArrow"
-            />
+            >
+              <!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+              <path
+                d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"
+                style="fill: black"
+              />
+            </svg>
           </div>
         </div>
       </div>
